--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -17,6 +17,7 @@ tauri = { version = "1.5", features = ["shell-open"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 svg = "0.14.0"
+quick-xml = "0.31.0"
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem
