--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "license": "MIT",
   "dependencies": {
     "@tauri-apps/api": "^1.5.0",
+    "@types/d3": "^7.4.3",
+    "d3": "^7.8.5",
     "solid-js": "^1.7.8"
   },
   "devDependencies": {
