--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -18,6 +18,7 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 svg = "0.14.0"
 quick-xml = "0.31.0"
+resvg = "0.36.0"
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem
