--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "license": "MIT",
   "dependencies": {
+    "@fontsource/roboto-mono": "^5.0.15",
     "@tauri-apps/api": "^1.5.0",
     "@types/d3": "^7.4.3",
     "d3": "^7.8.5",
